[tool.poetry]
name = "repl_python3_Python-WebSockets"
version = "0.1.0"
description = ""
authors = ["kfk <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.16.0"
fastapi = "^0.71.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
